# PoisonedRAG

./: .gitignore  =0.2.24  README.md  generate_contexts.py  generate_gpt_contexts.py  generate_gt_contexts.py  get_gpt_embeddings.py  main.py  prepare_dataset.py  pyproject.toml  run.py  run_danger_experiment.py  run_experiments.py
model_configs/: gpt3.5_config.json  llama_quant_config.json
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib  results.tex
poisoned_rag/: attack.py  utils.py
poisoned_rag/contriever_src/: data.py
poisoned_rag/models/: GPT.py  __init__.py  llama_quant.py
poisoned_rag_defence/: __init__.py  context_variance_encouragement.py
poisoned_rag_defence/danger_evaluation/: danger_evaluation.py
poisoned_rag_defence/models/: GPT.py  Vicuna.py  model.py
poisoned_rag_defense/: attack.py  danger_identification.py  utils.py
poisoned_rag_defense/contriever_src/: slurm.py
poisoned_rag_defense/danger_evaluation/: danger_evaluation.py
poisoned_rag_defense/danger_identification/: combined_prompts.py  separate_prompts.py
poisoned_rag_defense/models/: __init__.py  embedding.py
poisoned_rag_defense/prompts/: prompt_original.py  prompt_refined.py  prompts.py
results/experiments/: analysis.py  varying_n_analysis _multi.py  varying_n_analysis.py
run/analysis/: analysis.py  utils.py  varying_n_analysis.py
run/experiments/: experiment.py  generate_contexts.py  generate_gt_contexts.py  initialise_experiment.py  initialise_experiment_set.py  run_llm.py  (+3 more)
src/: attack.py  danger_identification.py  prompts.py  utils.py
(+81 files in other folders)
